# calculator

./: CMakeLists.txt  README.md  conanfile.txt
data/io_files/: calculator_test_1.txt  calculator_test_2.txt  calculator_test_3_errors.txt  test1.txt
src/: main.cpp
src/calculator/: CMakeLists.txt  calculator.cpp
src/calculator/calculator/: calculator.hpp
src/token/: CMakeLists.txt  token.cpp
src/token/token/: token.hpp
src/token_stream/: CMakeLists.txt  token_stream.cpp
src/token_stream/token_stream/: token_stream.hpp
src/variables/: CMakeLists.txt  variables.cpp
src/variables/variables/: variables.hpp
tests/: CMakeLists.txt  calculator.exception.test.cpp  calculator.test.cpp  main.test.cpp  statement.exception.test.cpp  variables.test.cpp
